Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -12,6 +12,6 @@
         laborum ullam earum. 
         Ratione quam, nostrum obcaecati, itaque repudiandae facilis magni, 
         saepe quas ducimus cumque cupiditate possimus fuga alias dicta.</p>
-    
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi mollitia quia nihil numquam beatae optio officiis est magnam voluptate aliquid. Sint deserunt dolorem consequatur, veritatis laudantium quis omnis facilis perspiciatis.</p>
 </body>
 </html>
